--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.5",
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.14",
+    "@nanostores/react": "^0.4.1",
+    "framer-motion": "^9.0.1",
+    "nanostores": "^0.7.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.0",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.1"
   }
